--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ xLauncher/Files/BypassFiles/Taleris2BP.exe
 xLauncher/Files/BypassFiles/XenoxMT2.exe
 xLauncher/Files/BypassFiles/XheliaBP.exe
 xLauncher/Files/Launcher.exe
+xLauncher/Files/Bot/ssl/rhelper.exe
+xLauncher/Files/Bot/ssl/rhelperv2.exe
+xLauncher/Files/BypassFiles/HorizonMt2BP.exe
+xLauncher/Files/BypassFiles/Legacy2BP.exe
+xLauncher/Files/BypassFiles/Legend2BP.exe
+xLauncher/Files/BypassFiles/Piya2BP.exe
+xLauncher/Files/BypassFiles/Solana2BP.exe
+xLauncher/Files/BypassFiles/solarisRunner.exe
+xLauncher/Files/BypassFiles/Spark2ClientBP.exe
+xLauncher/Files/BypassFiles/Taleris2BP.exe
+xLauncher/Files/BypassFiles/XenoxMT2.exe
+xLauncher/Files/BypassFiles/XheliaBP.exe
+xLauncher/Files/Launcher.exe
